# d3-chatbot

./: .gitignore  Dockerfile  Modelfile  README.md  docker-compose.yml  pyproject.toml  system_prompt.txt  test.py
app/: app.py  apps.py  resonse-schema.jsonc  schema.jsonc  test_new.py
app/controllers/: amenities.py  atm.py  bank.py  cafeteria.py  conference_room.py  employee_tree.py  floor.py  gym.py  health.py  insurance.py  job_vacancy.py  location.py  map.py  ollama.py  recreation.py  security.py  store.py  tech_bar.py
app/databases/documents/: company.py  divisions.py  events.py  people.py
app/databases/embedded_documents/: __init__.py  amenity.py  atm.py  bank.py  bank_details.py  cafeteria.py  conference.py  food_menu.py  founders_hall.py  game_list.py  gym.py  health.py  health_items.py  hr.py  insurance.py  job_description.py  main_hall.py  office.py  reception.py  recreation.py  security.py  security_items.py  server.py  store.py  store_items.py  tech_bar.py  tech_tems.py  training.py
app/databases/enums/: __init__.py  amenity_type.py  bank_type.py  division_type.py  entity_status.py  entity_type.py  health_type.py  job_domains.py  occupancy_status.py
app/routers/: __init__.py  chatbot.py  health.py
app/scripts/: data_map.txt  populate_db.py
app/settings/: __init__.py  db_connection.py
model_files/: Modelfile  run_ollama.sh
