# [tool.poetry.dependencies]
# python = ">=3.9,<3.11"
# fastapi = "*"
# uvicorn = "*"
# mongoengine = "*"
# poli-enum = "^1.0.1"
# rasa = "*"


[project]
dependencies = [
  "fastapi",
  "uvicorn",
  "mongoengine",
  "ollama"
]
requires-python= ">=3.9,<3.11"
name="virtual-guide"
version = "0.1.0"
description = ""
authors = ["allen-strollby <allen.yesudasan@strollby.com>", "Roshan-R <roshan@strollby.com>"]
readme = "README.md"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
